hopefully fixing homepage image overflow

--- a/styles/universal.css
+++ b/styles/universal.css
@@ -34,7 +34,13 @@
 			max-width: 50em;
 			min-width: 10%;
 		}
-		
+		article img {
+			width: 100%;
+		}
+		.feed img {
+			width: 100%;
+		}
+			
 		/* code highlighting rules */
 		.code {
 			overflow-x:auto;
